--- a/auth/package.json
+++ b/auth/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
+    "ioredis-mock": "^8.13.0",
     "jest": "^30.2.0",
     "mongodb-memory-server": "^10.2.3",
     "nodemon": "^2.0.22",
